# endole-scraper

./: .gitignore  ENDOLE.db  README.md  pyproject.toml  run.py
business_scraper/: __init__.py
business_scraper/common/: sqlite_table.py
business_scraper/pipeline/: extract_data.py  format_data.py
business_scraper/tables/: endole.py
endole_scraper/: __init__.py
endole_scraper/common/: extract_data.py  extract_postcodes.py  format_data.py
endole_scraper/src/: run_extract_postcodes.py  run_full_postcodes.py  run_outbound_codes.py
endole_scraper/tables/: __init__.py  endole.py
endole_scraper/utils/: utils.py
tests/: test_company_count.py
